--- a/index.html
+++ b/index.html
@@ -170,6 +170,44 @@
                     <h2>文案</h2>
                     <p>自學過程中，運用所學製作的作品</p>
                 </div>
+
+                <div class="project-card">
+                    
+                    <div class="card-text">
+                        <div><a href="https://drive5566.github.io/vue_web_free-dive/#/About" target="_blank">VUE網站</a>
+                            <span class="material-symbols-outlined">
+                                link
+                            </span>
+                        </div>
+
+
+                        <p>
+                            1.VUE使用 <br>
+                            2.ajax使用 <br>
+
+                        </p>
+                    </div>
+                    <div class="card-img"><img src="./img/WeChat 圖片_20230927101131.png" alt=""></div>
+                </div>
+                <div class="project-card">
+                    
+                    <div class="card-text">
+                        <div><a href="https://drive5566.github.io/camp/" target="_blank">網站</a>
+                            <span class="material-symbols-outlined">
+                                link
+                            </span>
+                        </div>
+
+
+                        <p>
+                            1.HTML使用 <br>
+                            2.CSS使用 <br>
+                            3.js使用 <br>
+                            4.ajax使用 
+                        </p>
+                    </div>
+                    <div class="card-img"><img src="./img/2023-06-02 110623.jpg" alt=""></div>
+                </div>
                 <div class="project-card">
                     <div class="card-text">
                         <div><a href="https://drive5566.github.io/practise3-/index.html " target="_blank" >網拍網站</a>
@@ -207,24 +245,7 @@
                     <div class="card-img"><img src="./img/2023-05-30 144802.jpg" alt=""></div>
                 </div>
 
-                <div class="project-card">
-                    <div class="card-text">
-                        <div><a href="https://drive5566.github.io/camp/" target="_blank">網站</a>
-                            <span class="material-symbols-outlined">
-                                link
-                            </span>
-                        </div>
 
-
-                        <p>
-                            1.HTML使用 <br>
-                            2.CSS使用 <br>
-                            3.js使用 <br>
-                            4.ajax使用 
-                        </p>
-                    </div>
-                    <div class="card-img"><img src="./img/2023-06-02 110623.jpg" alt=""></div>
-                </div>
             </div>
         </div>
         <!-- 文案結束 -->
