--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="experience-content-container">
                     <div class="experience-content-left">
                         <div class="content-text-1">
-                            <h3>2021/11 - 至今</h3>
+                            <h3>2021/11 - 2023/10</h3>
                             <h2>硬體工程師</h2>
                             <p>
                             1.制定研發項目方向<br>
@@ -170,7 +170,27 @@
                     <h2>文案</h2>
                     <p>自學過程中，運用所學製作的作品</p>
                 </div>
+                <div class="project-card">
+                    
+                    <div class="card-text">
+                        <div><a href="https://drive5566.github.io/vue3-web/#/" target="_blank">VUE網站</a>
+                            <span class="material-symbols-outlined">
+                                link
+                            </span>
+                        </div>
 
+
+                        <p>
+                            1.VUE使用 <br>
+                            2.router <br>
+                            3.生命週期 <br>
+                            4.props<br>
+                            5.query<br>
+
+                        </p>
+                    </div>
+                    <div class="card-img"><img src="./img/螢幕擷取畫面 2024-01-26 171124.png" alt=""></div>
+                </div>
                 <div class="project-card">
                     
                     <div class="card-text">
